@@ -34,14 +34,6 @@ sub helper_simplereports($$$$$$)
   }
 
   $$OperatingMinRef = 1;
-  if ($Inforef->{'OutputFormat'} eq "HTML")
-  {
-    push(@$Outputarrayref, "<table border=\"1\"><tr><td><b>Name</b></td><td><b>Results</b></td></tr>\n");
-  }
-  else
-  {
-    push(@$Outputarrayref, "".("-"x70)."\n");
-  }
   foreach $line (@Output)
   {
     # <TODO>Do more clever things with operating (Bold/blink/etc)</TODO>
@@ -51,26 +43,45 @@ sub helper_simplereports($$$$$$)
       $$OperatingMinRef = ($$OperatingMinRef > $line->{'operating'})?$line->{'operating'}:$$OperatingMinRef;
     }
 
-    if ($Inforef->{'OutputFormat'} eq "HTML")
+    if (defined($line->{'operating'}) && $line->{'operating'} < 1.0)
     {
-      # <TODO>Do something more clever with HTML (think HTML::Entities) though the <pre> is bad too</TODO>
-      push(@$Outputarrayref, "<tr><td>$line->{'name'}</td><td><pre>$line->{'data'}</pre></td></tr>");
+      if ($Inforef->{'OutputFormat'} eq "HTML")
+      {
+	# <TODO>Do something more clever with HTML (think HTML::Entities) though the <pre> is bad too</TODO>
+	unshift(@$Outputarrayref, "<tr><td>$line->{'name'}</td><td><pre>$line->{'data'}</pre></td></tr>");
+      }
+      else
+      {
+	unshift(@$Outputarrayref, "".("-"x70)."\n");
+	unshift(@$Outputarrayref, "$line->{'data'}");
+	unshift(@$Outputarrayref, "$line->{'name'}:\n");
+      }
     }
     else
     {
-      push(@$Outputarrayref, "$line->{'name'}:\n");
-      push(@$Outputarrayref, "$line->{'data'}");
-      push(@$Outputarrayref, "".("-"x70)."\n");
+      if ($Inforef->{'OutputFormat'} eq "HTML")
+      {
+	# <TODO>Do something more clever with HTML (think HTML::Entities) though the <pre> is bad too</TODO>
+	push(@$Outputarrayref, "<tr><td>$line->{'name'}</td><td><pre>$line->{'data'}</pre></td></tr>");
+      }
+      else
+      {
+	push(@$Outputarrayref, "$line->{'name'}:\n");
+	push(@$Outputarrayref, "$line->{'data'}");
+	push(@$Outputarrayref, "".("-"x70)."\n");
+      }
     }
   }
   if ($Inforef->{'OutputFormat'} eq "HTML")
   {
     push(@$Outputarrayref, "</table>\n");
 
+    unshift(@$Outputarrayref, "<table border=\"1\"><tr><td><b>Name</b></td><td><b>Results</b></td></tr>\n");
     unshift(@$Outputarrayref, sprintf("<p><center>Operating at %.0f%%</center></p><br />\n",$$OperatingMinRef*100));
   }
   else
   {
+    unshift(@$Outputarrayref, "".("-"x70)."\n");
     unshift(@$Outputarrayref, sprintf("                                Operating at %.0f%%\n\n",$$OperatingMinRef*100));
   }
   1;
