@@ -1,3 +1,13 @@
+2004-04-06  Seth Robertson  <seth@pearl.sysdetect.com>
+
+	* perl/BkReportGen/helper_simplereports.pl
+	(helper_simplereports($$$$$$)): Allow report errors to come out
+	first.  Context be damned!
+
+	* perl/BkReportGen/helper_ifconfig.pl (helper_ifconfig($$$$)): If
+	we have interfaces defined in antura.conf, only report errors
+	about those interfaces.
+
 2004-03-11  Seth Robertson  <seth@pearl.sysdetect.com>
 
 	* bin/quotexml: Program to quote xml (or html) from people who
